@@ -4,6 +4,8 @@ CHANGES-1.4.txt
 CHANGES IN CUPS V1.4.7
 
 	- Documentation changes (STR #3710, STR #3720, STR #3745)
+	- The cupsctl program now displays an error if you try to directly set
+	  the Port or Listen directives (STR #3749)
 	- PPD files with "*JobPatchFile: bla" no longer fail to load in relaxed
 	  conformance mode (STR #3747)
 	- The scheduler generated a bad notify-text string for printer state
